# artisan-core

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  startup.sh  tox.ini
app/helpers/: database.py  environment.py
app/helpers/logs/: factory.py
app/helpers/logs/formatter/: standard.py
app/middlewares/: logger.py  logging.py
app/requests/: user.py
app/responses/: user.py
app/services/: app.py  logger.py  user.py
config/: app.py
handlers/: company.py  data_validation.py  evaluation.py  prediction.py  topic_modeling.py  training.py  user.py
public/: main.py
public/static/: welcome.html
routes/: health.py  users.py
tests/: conftest.py
tests/feature/: test_data_validation.py  test_evaluation.py
tests/unit/: test_company_handler.py  test_database_config.py  test_user_service.py
