[tool.poetry]
name = "spartan-framework"
version = "0.1.8"
description = "A micro framework for serverless development in AWS"
authors = ["Sydel Palinlin <sydel.palinlin@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
httpx = "0.25.2"
python-dotenv = "1.0.1"
email-validator = "2.2.0"
jsonpickle = "3.4.2"
python-jose = "3.3.0"
pymysql = "1.1.1"
pydantic-settings = "2.7.0"
pydantic = "2.10.4"
sqlalchemy = "2.0.36"
aws-lambda-powertools = "3.4.0"
boto3 = "1.35.89"
pg8000 = "1.31.2"
annotated-types = "0.7.0"
anyio = "4.7.0"
asn1crypto = "1.5.1"
botocore = "1.35.89"
certifi = "2024.12.14"
dnspython = "2.7.0"
ecdsa = "0.19.0"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.7"
idna = "3.10"
jmespath = "1.0.1"
pyasn1 = "0.6.1"
pydantic-core = "2.27.2"
python-dateutil = "2.9.0.post0"
rsa = "4.9"
s3transfer = "0.10.4"
scramp = "1.4.5"
six = "1.17.0"
sniffio = "1.3.1"
starlette = "0.41.3"
typing-extensions = "4.12.2"
urllib3 = "2.3.0"
poetry-plugin-export = "^1.8.0"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.1"
boto3 = "^1.28.66"
alembic = "^1.13.3"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
bandit = "^1.7.5"
poetry-plugin-export = "^1.8.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.21.1"
faker = "^30.8.2"
moto = "4.2.9"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integrations",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
